doop-analyzer/fixtures/gatekeeper/gkownerinfoonhelmreleases.yaml
# NOTE: most fields elided for brevity
apiVersion: v1
kind: List
items:
- apiVersion: constraints.gatekeeper.sh/v1beta1
  kind: GkOwnerInfoOnHelmReleases
  metadata:
    annotations:
      ccloud/support-group-datasource: owner-info
      constraint-source: https://example.com/constraint-owner-info-on-helm-releases.yaml
      docstring: This check finds Helm releases that do not define owner info.
      template-source: https://example.com/constrainttemplate-owner-info-on-helm-releases.yaml
    generation: 5
    labels:
      severity: error
    name: ownerinfoonhelmreleases
    uid: bf22bc6d-e6e5-4f29-844c-91fc2475356a
  status:
    auditTimestamp: "2023-08-01T11:35:53Z"
    byPod:
    - constraintUID: bf22bc6d-e6e5-4f29-844c-91fc2475356a
      enforced: true
      id: gatekeeper-audit-7cd574ddbc-z4h4s
      observedGeneration: 5
      operations:
      - audit
      - status
    - constraintUID: bf22bc6d-e6e5-4f29-844c-91fc2475356a
      enforced: true
      id: gatekeeper-controller-manager-69c46dc578-4vd9g
      observedGeneration: 5
      operations:
      - webhook
    totalViolations: 2
    violations:
    - enforcementAction: deny
      group: ""
      kind: Secret
      message: '{"support_group":"none","service":"none"} >> Chart does not contain
        owner info. Please add the common/owner-info chart as a direct dependency.'
      name: sh.helm.release.v1.qa-c67f19d507d543a3a9eaa3607729826f.v45
      namespace: kubernikus
      version: v1
    - enforcementAction: deny
      group: ""
      kind: Secret
      message: '{"support_group":"none","service":"none"} >> Chart does not contain
        owner info. Please add the common/owner-info chart as a direct dependency.'
      name: sh.helm.release.v1.vsphere-csi.v1
      namespace: vmware-system-csi
      version: v1
